--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,13 @@ body{
     font-weight: 600;
     margin: 1.5rem 0;
 }
+.post-content h2{
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin: 1.5rem 0;
+}
+.post-content h3{
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin: 1.5rem 0;
+}
